# uni-projects

./: .gitignore  CMakeLists.txt  LICENSE  README.md
C++ Projects/: CMakeLists.txt
C++ Projects/Worksheet 1/: W1E10.cpp  W1E2.cpp  W1E3.cpp  W1E4.cpp  W1E5.cpp  W1E6.cpp
C++ Projects/Worksheet 2/: W2E1.cpp  W2E2.cpp  W2E3.cpp  W2E4.cpp  W2E6.cpp  W2E7.cpp  W2E8.cpp  bmi.cpp
C++ Projects/Worksheet 3/: W3E4.cpp
C++ Projects/Worksheet 4/: W4E1.cpp  W4E2.cpp  W4E5.cpp  W4E6.cpp
C++ Projects/Worksheet 5/: W5E10.cpp  W5E11.cpp  W5E12.cpp  W5E14.cpp  W5E15.cpp  W5E17.cpp  W5E3.cpp  W5E4.cpp  W5E6.cpp  W5E7.cpp  W5E8.cpp
C++ Projects/practice/: PracticeTest1.cpp  PracticeTest1F.cpp  README.md
Desafio 1/: 114862.cpp
Ficha 1/: Exercicio 1.cpp  Exercicio 2.cpp  Exercicio 7.cpp  Exercicio 8.cpp  Exercicio 9.cpp
Ficha 2/: Exercicio 1.cpp  Exercicio 2.cpp  Exercicio 4.cpp  Exercicio 5.cpp  Exercicio 6.cpp  Exercicio1.cpp  Exercicio3.cpp  Exercicio4.cpp  Exercicio5.cpp  bmi.cpp
Ficha 3/: Exercicio 1.cpp  Exercicio 2.cpp  Exercicio 3.cpp  Exercicio 5.cpp
Ficha 4/: Exercicio 1.cpp  Exercicio 2.cpp  Exercicio 3.cpp  Exercicio 4.cpp
Ficha 5/: Exercicio 1.cpp  Exercicio 11.cpp  Exercicio 13.cpp  Exercicio 15.cpp  Exercicio 16.cpp  Exercicio 17.cpp  Exercicio 2.cpp  Exercicio 5.cpp  Exercicio 8.cpp  Exercicio 9.cpp
Ficha 6/: Exercicio 1.cpp
Ficha 7/: Exercicio 2.cpp
Programa de gestão de stock/: stock.cpp
Projetos C++/: CMakeLists.txt
Projetos C++ (PO)/: README.md
Projetos C++ (PO)/Ficha 2/: Exercicio1.cpp
Projetos C++ (PO)/Ficha 6/: Exercicio1.cpp  Exercicio2.cpp
Projetos C++ (PO)/Ficha 6H/Exercicio1/: main.cpp  point3.cpp  point3.h  tuple.cpp  tuple.h  vector3.cpp  vector3.h
Projetos C++ (PO)/Ficha 6H/Exercicio2/: Apartment.cpp  Apartment.h  Car.cpp  Car.h  HotelRoom.cpp  HotelRoom.h  Lodging.cpp  Lodging.h  TravelAgency.cpp  TravelAgency.h  main.cpp
Projetos C++/Ficha 1/: Exercicio 10.cpp  Exercicio 3.cpp  Exercicio 4.cpp  Exercicio 5.cpp  Exercicio 6.cpp
Projetos C++/Ficha 10/: Exercicio 1.cpp  Exercicio 2.cpp  Exercicio 2ii.cpp  Exercicio 3.cpp  Exercicio 4.cpp  Exercicio 4ii.cpp
Projetos C++/Ficha 2/: Exercicio 3.cpp  Exercicio 6.cpp  Exercicio 7.cpp  Exercicio 8.cpp  Exercicio1.cpp
Projetos C++/Ficha 3/: Exercicio 3.cpp  Exercicio 4.cpp
Projetos C++/Ficha 4/: Exercicio 4.cpp  Exercicio 5.cpp  Exercicio 6.cpp
Projetos C++/Ficha 5/: Exercicio 10.cpp  Exercicio 12.cpp  Exercicio 13.cpp  Exercicio 14.cpp  Exercicio 3.cpp  Exercicio 4.cpp  Exercicio 6.cpp  Exercicio 7.cpp
Projetos C++/Ficha 6/: Exercicio 2.cpp  Exercicio 3 menu.cpp  Exercicio 3.cpp  Exercicio 4.1.cpp  Exercicio 4.cpp  Exercicio 5.cpp
Projetos C++/Ficha 7/: Exercicio 1.1.cpp  Exercicio 1.cpp  Exercicio 2.1.cpp  Exercicio 2.cpp  Exercicio 3.cpp
Projetos C++/Ficha 8/Exercicio 1/: Exercicio 1 funcs.cpp  Exercicio 1.cpp  Exercicio 1.h
Projetos C++/Ficha 8/Exercicio 2/: Exercicio 2.cpp
Projetos C++/Ficha 8/Exercicio 3/: Exercicio 3.cpp  imag.cpp  imag.h
Projetos C++/Ficha 8/Exercicio 4/: Exercicio 4.cpp  functions.cpp  functions.h
Projetos C++/Ficha 9/: Exercicio 1.1.cpp  Exercicio 1.cpp  Exercicio 2&3.cpp  Exercicio 4.cpp  Exercicio 5.cpp  Exercicio 6.cpp
Projetos C++/Testes/Desafio 2/: 114862.cpp  aux114862.cpp  aux114862.h
