cmake_minimum_required(VERSION 3.23)
project(Programacao)

set(CMAKE_CXX_STANDARD 14)

add_executable(HelloWorld main.cpp)
add_executable(F1E1 "Ficha 1/Exercicio 1.cpp")
add_executable(F1E2 "Ficha 1/Exercicio 2.cpp")
add_executable(F1E3 "Ficha 1/Exercicio 3.cpp")
add_executable(F1E4 "Ficha 1/Exercicio 4.cpp")
add_executable(F1E5 "Ficha 1/Exercicio 5.cpp")
add_executable(F1E6 "Ficha 1/Exercicio 6.cpp")
add_executable(F1E7 "Ficha 1/Exercicio 7.cpp")
add_executable(F1E8 "Ficha 1/Exercicio 8.cpp")
add_executable(F1E9 "Ficha 1/Exercicio 9.cpp")
add_executable(F1E10 "Ficha 1/Exercicio 10.cpp")
add_executable(F2E1 "Ficha 2/Exercicio 1.cpp")
add_executable(F2E2 "Ficha 2/Exercicio 2.cpp")
add_executable(F2E3 "Ficha 2/Exercicio 3.cpp")
add_executable(F2E4 "Ficha 2/Exercicio 4.cpp")
add_executable(F2E5 "Ficha 2/Exercicio 5.cpp")
add_executable(F2E6 "Ficha 2/Exercicio 6.cpp")
add_executable(F2E7 "Ficha 2/Exercicio 7.cpp")
add_executable(F2E8 "Ficha 2/Exercicio 8.cpp")
add_executable(F3E1 "Ficha 3/Exercicio 1.cpp")
add_executable(F3E2 "Ficha 3/Exercicio 2.cpp")
add_executable(F3E3 "Ficha 3/Exercicio 3.cpp")
add_executable(F3E4 "Ficha 3/Exercicio 4.cpp")
add_executable(F3E5 "Ficha 3/Exercicio 5.cpp")
add_executable(F4E1 "Ficha 4/Exercicio 1.cpp")
add_executable(F4E2 "Ficha 4/Exercicio 2.cpp")
add_executable(F4E3 "Ficha 4/Exercicio 3.cpp")
add_executable(F4E4 "Ficha 4/Exercicio 4.cpp")
add_executable(F4E5 "Ficha 4/Exercicio 5.cpp")
add_executable(F4E6 "Ficha 4/Exercicio 6.cpp")
add_executable(F5E1 "Ficha 5/Exercicio 1.cpp")
add_executable(F5E2 "Ficha 5/Exercicio 2.cpp")
add_executable(F5E3 "Ficha 5/Exercicio 3.cpp")
add_executable(F5E4 "Ficha 5/Exercicio 4.cpp")
add_executable(F5E5 "Ficha 5/Exercicio 5.cpp")
add_executable(F5E6 "Ficha 5/Exercicio 6.cpp")
add_executable(F5E7 "Ficha 5/Exercicio 7.cpp")
add_executable(F5E8 "Ficha 5/Exercicio 8.cpp")
add_executable(F5E9 "Ficha 5/Exercicio 9.cpp")
add_executable(F5E10 "Ficha 5/Exercicio 10.cpp")
add_executable(F5E11 "Ficha 5/Exercicio 11.cpp")
add_executable(F5E12 "Ficha 5/Exercicio 12.cpp")
add_executable(F5E13 "Ficha 5/Exercicio 13.cpp")
add_executable(F5E14 "Ficha 5/Exercicio 14.cpp")
add_executable(F5E15 "Ficha 5/Exercicio 15.cpp")
add_executable(F5E16 "Ficha 5/Exercicio 16.cpp")
add_executable(F5E17 "Ficha 5/Exercicio 17.cpp")
add_executable(F6E1 "Ficha 6/Exercicio 1.cpp")
add_executable(F6E2 "Ficha 6/Exercicio 2.cpp")
add_executable(Teste1 "Desafio 1/114862.cpp")