cmake_minimum_required(VERSION 3.23)
project(Programacao)

set(CMAKE_CXX_STANDARD 14)

add_executable(HelloWorld main.cpp)
add_executable(W1E1 "Worksheet 1/W1E1.cpp")
add_executable(W1E2 "Worksheet 1/W1E2.cpp")
add_executable(W1E3 "Worksheet 1/W1E3.cpp")
add_executable(W1E4 "Worksheet 1/W1E4.cpp")
add_executable(W1E5 "Worksheet 1/W1E5.cpp")
add_executable(W1E6 "Worksheet 1/W1E6.cpp")
add_executable(W1E7 "Worksheet 1/W1E7.cpp")
add_executable(W1E8 "Worksheet 1/W1E8.cpp")
add_executable(W1E9 "Worksheet 1/W1E9.cpp")
add_executable(W1E10 "Worksheet 1/W1E10.cpp")
add_executable(W2E1 "Worksheet 2/W2E1.cpp")
add_executable(W2E2 "Worksheet 2/W2E2.cpp")
add_executable(W2E3 "Worksheet 2/W2E3.cpp")
add_executable(W2E4 "Worksheet 2/W2E4.cpp")
add_executable(W2E5 "Worksheet 2/W2E5.cpp")
add_executable(W2E6 "Worksheet 2/W2E6.cpp")
add_executable(W2E7 "Worksheet 2/W2E7.cpp")
add_executable(W2E8 "Worksheet 2/W2E8.cpp")
add_executable(W3E1 "Worksheet 3/W3E1.cpp")
add_executable(W3E2 "Worksheet 3/W3E2.cpp")
add_executable(W3E3 "Worksheet 3/W3E3.cpp")
add_executable(W3E4 "Worksheet 3/W3E4.cpp")
add_executable(W3E5 "Worksheet 3/W3E5.cpp")
add_executable(W4E1 "Worksheet 4/W4E1.cpp")
add_executable(W4E2 "Worksheet 4/W4E2.cpp")
add_executable(W4E3 "Worksheet 4/W4E3.cpp")
add_executable(W4E4 "Worksheet 4/W4E4.cpp")
add_executable(W4E5 "Worksheet 4/W4E5.cpp")
add_executable(W4E6 "Worksheet 4/W4E6.cpp")
add_executable(W5E1 "Worksheet 5/W5E1.cpp")
add_executable(W5E2 "Worksheet 5/W5E2.cpp")
add_executable(W5E3 "Worksheet 5/W5E3.cpp")
add_executable(W5E4 "Worksheet 5/W5E4.cpp")
add_executable(W5E5 "Worksheet 5/W5E5.cpp")
add_executable(W5E6 "Worksheet 5/W5E6.cpp")
add_executable(W5E7 "Worksheet 5/W5E7.cpp")
add_executable(W5E8 "Worksheet 5/W5E8.cpp")
add_executable(W5E9 "Worksheet 5/W5E9.cpp")
add_executable(W5E10 "Worksheet 5/W5E10.cpp")
add_executable(W5E11 "Worksheet 5/W5E11.cpp")
add_executable(W5E12 "Worksheet 5/W5E12.cpp")
add_executable(W5E13 "Worksheet 5/W5E13.cpp")
add_executable(W5E14 "Worksheet 5/W5E14.cpp")
add_executable(W5E15 "Worksheet 5/W5E15.cpp")
add_executable(W5E16 "Worksheet 5/W5E16.cpp")
add_executable(W5E17 "Worksheet 5/W5E17.cpp")
